<resources>
    <string name="app_name">Mindfulness</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
        dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
        quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede
        justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis
        vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum
        semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac,
        enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
        laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.
        Nam eget dui.

        Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem
        neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
        tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget
        eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed
        consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate
        eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in
        dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et
        ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.

        Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed
        aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent
        adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero.
        Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id,
        imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque
        facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit
        quis, nisi.

        Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent
        congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus
        velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi
        quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci. Phasellus consectetuer
        vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit
        amet augue. In turpis. Pellentesque posuere. Praesent turpis.

        Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
        Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue
        ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum
        primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Ut varius tincidunt libero.
        Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque. Pellentesque habitant morbi tristique
        senectus et netus et malesuada fames ac turpis egestas.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sessionmap_id">5bdc9ecbe9bc22054be4a64d</string>
    <string name="title_session">Overzicht</string>
    <string name="title_feedback">Uw Feed</string>
    <string name="title_notifications">Notificaties</string>
    <string name="title_activity_scanner">Scanner</string>

    <!-- settings for Notifications -->
    <string name="pref_title_notifications">Notificaties</string>
    <string name="pref_title_user">Gebruiker</string>
    <string name="pref_title_privacy">Privacy</string>
    <string name="switch_notifications">switch_notifications</string>
    <string name="switch_title_notifications">Notificaties</string>
    <string name="title_activity_settings">Settings</string>

    <string name="timePreference_key">t</string>
    <string name="timePreference_summary">Stel een tijdstip in van wanneer u een oefening wilt doen.</string>
    <string name="timePreference_title">Notificatie tijdstip</string>

    <string name="key_vibrate">key_vibrate</string>
    <string name="summary_vibrate">Vibreer als ik een notificatie krijg</string>
    <string name="title_vibrate">Vibreer</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Dit veld is verplicht</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_login_form_register">Registreer</string>
    <string name="action_register">Registreer</string>
    <string name="logout">Uitloggen</string>
    <!-- Strings related to register -->
    <string name="prompt_groupcode">Groepscode</string>
    <string name="prompt_repeat_password">Herhaal wachtwoord</string>
    <string name="action_register_short">Registreer</string>
    <string name="welcome_screen">MindFulness</string>
    <string name="feedback_beschrijving">Wij zouden het ten zeerste appreciëren moest u even tijd maken om deze sessie
        te beoordelen. Zo kunnen wij u een betere ervaring geven.
    </string>
    <string name="feedback_titel">GEEF ONS UW FEEDBACK!</string>
    <string name="title_history">Profiel</string>
    <string name="post_image_desc">back icon</string>
    <string name="settings">Instellingen</string>
    <string name="pref_key_version">1.0.5</string>
    <string name="pref_feedback">pref_feedback</string>
    <string name="wantsFeedback">wantsFeedback</string>
    <string name="pref_groep">pref_groep</string>
    <string name="pref_email">pref_email</string>
    <string name="pref_wachtwoord">pref_wachtwoord</string>
    <string name="pref_privacy">pref_privacy</string>
    <string name="empty_email_err">Email niet ingevuld.</string>
    <string name="empty_passw_err">Wachtwoord niet ingevuld.</string>
    <string name="failed_registration">Er is iets mis gegaan, probeer later opnieuw</string>
    <string name="input_loading_text">Geschiedenis word opgehaald...</string>
    <string name="not_same_password">Wachtwoord komt niet overeen</string>
    <string name="fout_opgetreden">Er is een fout opgetreden, probeer opnieuw</string>
    <string name="email_not_same">Emails komen niet overeen</string>
    <string name="lockedSession">Deze sessie is nog niet unlocked.</string>
    <string name="NoSessionsYet">Huidige sessie: Nog geen vrijgespeeld!</string>

</resources>
