<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
                android:text="INLOGGEN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
        />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:ems="10"
                android:id="@+id/email" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:padding="18dp" android:autofillHints="" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>


        <EditText

                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:padding="18dp" android:autofillHints=""/>

        <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textStyle="bold" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/login_password" android:padding="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <Button
                android:id="@+id/login_form_register_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_login_form_register"
                android:textStyle="bold"
                android:onClick="toRegister"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="18dp"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>