<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="REGISTREREN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView2"
                android:textColor="@color/white"

                android:textAlignment="center"/>
        <EditText android:id="@+id/email"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:hint="@string/prompt_email"
                  android:inputType="textEmailAddress"
                  android:maxLines="1"
                  android:singleLine="true"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/textView2" android:padding="18dp"
                  app:backgroundTint="@color/white"
                  android:textColor="@color/white"
                  android:textColorHint="#f5f5f5"/>

        <EditText
                android:id="@+id/edit_register_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/email" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="18dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="#f5f5f5"/>

        <EditText
                android:id="@+id/edit_register_repeat_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_repeat_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_register_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:padding="18dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="#f5f5f5"/>

        <EditText
                android:id="@+id/edit_group_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_groupcode"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#f5f5f5" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_register_repeat_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:padding="18dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_24dp"
                app:backgroundTint="#00000000"
                android:id="@+id/registerfragment_GroupBtn" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_register_repeat_password"
                app:layout_constraintBottom_toBottomOf="@+id/edit_group_code"
                android:background="?attr/selectableItemBackgroundBorderless"
        />

        <Button
                android:id="@+id/btn_register"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/action_register"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:padding="18dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_group_code"/>
        <android.support.design.widget.FloatingActionButton
                android:id="@+id/scanCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/colorPrimaryDark"
                app:fabCustomSize="54dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/ic_camera_24dp"
                android:layout_margin="8dp"
                app:layout_constraintLeft_toRightOf="@id/edit_group_code"
                app:layout_constraintTop_toBottomOf="@+id/edit_register_repeat_password"
                app:elevation="3dp">

        </android.support.design.widget.FloatingActionButton>
        <Button
                android:text="IK HEB AL EEN ACCOUNT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="toLogin"
                android:id="@+id/btnBackToLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>