<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fillViewport="true">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
    >
        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp" android:src="@drawable/clouds_fog_forest"
                android:id="@+id/imageView3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:tint="#43000000"
        />

        <ImageView android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/ic_launcher" android:id="@+id/mindfulLogo"
                   android:layout_marginTop="32dp"
                   app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp" android:scaleType="centerCrop" android:adjustViewBounds="true"
        />
        <TextView
                android:text="@string/welcome_screen"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:textSize="30sp" android:textAlignment="center"
                android:textAllCaps="true" android:layout_margin="20dp" android:id="@+id/loginTitel"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mindfulLogo"
                app:layout_constraintHorizontal_bias="1.0" android:textColor="@color/white"/>
        <TextView
                android:text="Wachtwoord Vergeten"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView7"
                android:textColor="@color/white"

                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textAllCaps="true"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/loginTitel"/>
        <Button
                android:text="verstuur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/forgotpassword_emailBtn" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/forgotpassword_email"
                style="@style/Widget.AppCompat.Button.Colored" android:padding="18dp" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toStartOf="@+id/forgotpassword_loading"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/forgotpassword_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="18dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="#f5f5f5"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
        <TextView
                android:text="Verstuurd!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teforgotpassword_statustext"
                app:layout_constraintTop_toBottomOf="@+id/forgotpassword_emailBtn"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textStyle="italic" android:textColor="@color/white"
                android:visibility="invisible"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgotpassword_loading"
                android:visibility="gone"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/forgotpassword_emailBtn"
                android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/teforgotpassword_statustext"/>
        <EditText
                android:id="@+id/forgotpassword_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="18dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="#f5f5f5"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teforgotpassword_statustext" android:layout_marginTop="8dp"/>
        <EditText
                android:id="@+id/forgotpassword_passwordrepeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_repeat_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="18dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="#f5f5f5"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/forgotpassword_password" android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
                android:id="@+id/forgotpassword_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Code"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="18dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="#f5f5f5"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/forgotpassword_passwordrepeat" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/forgotpassword_passBtn"
                app:layout_constraintBottom_toTopOf="@id/btnBackToLoginfromBla"
                android:layout_marginBottom="32dp" app:layout_constraintVertical_bias="0.0"/>
        <Button
                android:text="opslaan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/forgotpassword_passBtn"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                style="@style/Widget.AppCompat.Button.Colored" android:padding="18dp"
                app:layout_constraintBottom_toBottomOf="@+id/forgotpassword_code" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/forgotpassword_passwordrepeat"
                android:layout_marginBottom="8dp"/>
        <Button
                android:text="IK HEB AL EEN ACCOUNT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="toLogin"
                android:id="@+id/btnBackToLoginfromBla"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                app:layout_constraintBottom_toTopOf="@+id/info_linearlayout"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" android:layout_marginBottom="32dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_linearlayout"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="16dp">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp" android:src="@drawable/ic_pieterlogo"
                    android:id="@+id/imageView2" android:contentDescription="TODO"
            />
            <TextView
                    android:text="Pieter-Jan De Schryver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:textAlignment="center"
                    android:textColor="@color/white"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>